improvement: allow wrap text presented as customer name (visual fixes)

--- a/css/style.less
+++ b/css/style.less
@@ -2452,9 +2452,10 @@ fieldset {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
-	white-space: nowrap;
 	.lms-ui-customer-select {
 		display: inline-block;
+		white-space: nowrap;
+
 		> span {
 			padding-right: 0.5em;
 		}
@@ -2487,5 +2488,6 @@ fieldset {
 		white-space: normal;
 		padding-left: 0.5em;
 		padding-right: 0.5em;
+		flex-grow: 1;
 	}
 }
